<resources>
    <string name="app_name">User Login</string>
    <string name="txtUserHint">User: </string>
    <string name="txtPasswordHint">Password: </string>"
    <string name="btnLoginText">Login</string>
    <string name="btnCancelText">Cancel</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>

    <!--  Bài tập 3  -->
    <string name="txtAppName">Send Email</string>
    <string name="txtTitleApp">Send Email</string>
    <string name="txtSendTo">To: </string>
    <string name="txtSubject">Subject: </string>
    <string name="txtMessage">Message: </string>
    <string name="btnSend">Send</string>

    <!--  Bài tập 4  -->
    <string name="txtAppNameMatch">Các phép toán số học cơ bản</string>
    <string name="txtFirstNumber">Nhập số A</string>
    <string name="txtSecondNumber">Nhập số B</string>
    <string name="txtResult">Kết quả</string>

    <!--  Bài tập 6  -->
    <string name="txtAppNameInformation">Thông tin cá nhân</string>

    <!-- Bài tập 7 -->
    <string name="txtAppNameChooseBirthdayDates">Chọn ngày sinh</string>
    <string name="title_activity_expandable_list_view">ExpandableListView</string>


    <string name="btnShowToast">Show Toast</string>
    <string name="btnExit_Text">Exit</string>
    <string name="app_name2">Alert Dialog</string>

    <string name="txt_name">Change Color</string>
</resources>