<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".chuong3.baitap.Chuong3_BaiTap3">

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="80dp"
        android:gravity="center"
        android:text="@string/txtTitleApp"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edt_subject"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="4dp"
        android:hint="@string/txtSubject"
        app:layout_constraintTop_toBottomOf="@+id/edt_send_to"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/edt_message"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:hint="@string/txtMessage"
        app:layout_constraintTop_toBottomOf="@+id/edt_subject"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/edt_send_to"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="4dp"
        android:hint="@string/txtSendTo"
        app:layout_constraintTop_toBottomOf="@+id/txt_title"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/btn_send"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/btnSend"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>