<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".chuong3.baitap.Chuong3_BaiTap5">

    <ImageView
        android:id="@+id/iv_logo_match"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="64dp"
        android:src="@drawable/baseline_android_24"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo_match">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/txtFirstNumber"
                android:layout_height="match_parent" />

            <EditText
                android:layout_width="match_parent"
                android:inputType="numberDecimal"
                android:id="@+id/edt_first_number"
                android:layout_height="60dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/txtSecondNumber"
                android:layout_height="match_parent" />

            <EditText
                android:layout_width="match_parent"
                android:id="@+id/edt_second_number"
                android:inputType="numberDecimal"
                android:layout_height="60dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/txtResult"
                android:layout_height="match_parent" />

            <Space
                android:layout_width="10dp"
                android:layout_height="match_parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:id="@+id/txt_result"
                android:gravity="center_vertical" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:text="+"
                android:layout_weight="1"
                android:id="@+id/btn_cong" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:text="-"
                android:layout_weight="1"
                android:id="@+id/btn_tru" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:text="*"
                android:id="@+id/btn_nhan" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:text="/"
                android:layout_weight="1"
                android:id="@+id/btn_chia" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>